<resources>
    <string name="app_name">CineYet</string>
    <string name="loginbackground">LoginBackground</string>
    <string name="email">" Email"</string>
    <string name="password">" Password"</string>
    <string name="emailicon">EmailIcon</string>
    <string name="login">Login</string>
    <string name="sign_up_button">Sign up.</string>
    <string name="forgot_password_button">Forgot password?</string>
    <string name="connect_with_google">Connect with Google</string>
    <string name="googlelogo">GoogleLogo</string>
    <string name="connect_with_facebook">Connect with Facebook</string>
    <string name="facebooklogo">FacebookLogo</string>
    <string name="not_part_of_the_gang_yet">Not part of the gang yet?</string>
    <string name="welcome_screen_msg">Connecting you to a community of cinephiles</string>
    <string name="username">" Username"</string>
    <string name="little_women_summary">Jo March reflects back and forth on her life, telling the beloved story of the March sisters - four young women, each determined to live life on her own terms.</string>
    <string name="lorem_ipsum">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent consectetur, quam in egestas dignissim, ex magna luctus turpis, at dignissim sem ex et ante. "</string>
</resources>
