<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/django"
    tools:context=".SignUpPage">

    <TextView
        android:id="@+id/WhiteBoxLogin"
        android:layout_width="254dp"
        android:layout_height="339dp"
        android:background="@drawable/round_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.694" />

    <TextView
        android:id="@+id/CreateAcc"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:fontFamily="cursive"
        android:gravity="center_horizontal"
        android:text="Create Account"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/WhiteBoxLogin"
        app:layout_constraintEnd_toEndOf="@+id/WhiteBoxLogin"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@+id/WhiteBoxLogin"
        app:layout_constraintTop_toTopOf="@+id/WhiteBoxLogin"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/NameSignUp"
        android:layout_width="187dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:autofillHints="Username"
        android:background="#FAF9F9"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint=" Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/WhiteBoxLogin"
        app:layout_constraintEnd_toEndOf="@+id/WhiteBoxLogin"
        app:layout_constraintHorizontal_bias="0.742"
        app:layout_constraintStart_toStartOf="@+id/WhiteBoxLogin"
        app:layout_constraintTop_toTopOf="@+id/WhiteBoxLogin"
        app:layout_constraintVertical_bias="0.322" />

    <EditText
        android:id="@+id/UserNameSignUp"
        android:layout_width="187dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:autofillHints="Username"
        android:background="#FAF9F9"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint=" Username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/WhiteBoxLogin"
        app:layout_constraintEnd_toEndOf="@+id/WhiteBoxLogin"
        app:layout_constraintHorizontal_bias="0.742"
        app:layout_constraintStart_toStartOf="@+id/WhiteBoxLogin"
        app:layout_constraintTop_toTopOf="@+id/WhiteBoxLogin"
        app:layout_constraintVertical_bias="0.169" />

    <ImageView
        android:id="@+id/EmailIcon"
        android:layout_width="33dp"
        android:layout_height="28dp"
        android:alpha="0.6"
        android:contentDescription="@string/emailicon"
        app:layout_constraintBottom_toBottomOf="@+id/WhiteBoxLogin"
        app:layout_constraintEnd_toEndOf="@+id/WhiteBoxLogin"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="@+id/WhiteBoxLogin"
        app:layout_constraintTop_toTopOf="@+id/WhiteBoxLogin"
        app:layout_constraintVertical_bias="0.481"
        app:srcCompat="@drawable/mail" />

    <ImageView
        android:id="@+id/passwordIcon"
        android:layout_width="32dp"
        android:layout_height="28dp"
        android:alpha="0.6"
        android:contentDescription="@string/password"
        app:layout_constraintBottom_toBottomOf="@+id/WhiteBoxLogin"
        app:layout_constraintEnd_toEndOf="@+id/WhiteBoxLogin"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="@+id/WhiteBoxLogin"
        app:layout_constraintTop_toTopOf="@+id/WhiteBoxLogin"
        app:layout_constraintVertical_bias="0.635"
        app:srcCompat="@drawable/password" />

    <ImageView
        android:id="@+id/PasswordIcon"
        android:layout_width="32dp"
        android:layout_height="28dp"
        android:alpha="0.6"
        android:contentDescription="@string/password"
        app:layout_constraintBottom_toBottomOf="@+id/WhiteBoxLogin"
        app:layout_constraintEnd_toEndOf="@+id/WhiteBoxLogin"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="@+id/WhiteBoxLogin"
        app:layout_constraintTop_toTopOf="@+id/WhiteBoxLogin"
        app:layout_constraintVertical_bias="0.799"
        app:srcCompat="@drawable/password" />

    <EditText
        android:id="@+id/ConfirmPasswordSignUp"
        android:layout_width="187dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:autofillHints="Password"
        android:background="#FAF9F9"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint=" Confirm Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/WhiteBoxLogin"
        app:layout_constraintEnd_toEndOf="@+id/WhiteBoxLogin"
        app:layout_constraintHorizontal_bias="0.742"
        app:layout_constraintStart_toStartOf="@+id/WhiteBoxLogin"
        app:layout_constraintTop_toTopOf="@+id/WhiteBoxLogin"
        app:layout_constraintVertical_bias="0.81" />

    <EditText
        android:id="@+id/passwordSignUp"
        android:layout_width="187dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:autofillHints="Password"
        android:background="#FAF9F9"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint=" Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/WhiteBoxLogin"
        app:layout_constraintEnd_toEndOf="@+id/WhiteBoxLogin"
        app:layout_constraintHorizontal_bias="0.742"
        app:layout_constraintStart_toStartOf="@+id/WhiteBoxLogin"
        app:layout_constraintTop_toTopOf="@+id/WhiteBoxLogin"
        app:layout_constraintVertical_bias="0.647" />

    <EditText
        android:id="@+id/EmailSignUp"
        android:layout_width="187dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:autofillHints="Email"
        android:background="#FAF9F9"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint=" Email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/WhiteBoxLogin"
        app:layout_constraintEnd_toEndOf="@+id/WhiteBoxLogin"
        app:layout_constraintHorizontal_bias="0.742"
        app:layout_constraintStart_toStartOf="@+id/WhiteBoxLogin"
        app:layout_constraintTop_toTopOf="@+id/WhiteBoxLogin"
        app:layout_constraintVertical_bias="0.477" />

    <ImageView
        android:id="@+id/NameIcon"
        android:layout_width="32dp"
        android:layout_height="27dp"
        android:alpha="0.6"
        android:contentDescription="Name"
        app:layout_constraintBottom_toBottomOf="@+id/WhiteBoxLogin"
        app:layout_constraintEnd_toEndOf="@+id/WhiteBoxLogin"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="@+id/WhiteBoxLogin"
        app:layout_constraintTop_toTopOf="@+id/WhiteBoxLogin"
        app:layout_constraintVertical_bias="0.316"
        app:srcCompat="@drawable/username_icon" />

    <ImageView
        android:id="@+id/userNameIcon"
        android:layout_width="32dp"
        android:layout_height="28dp"
        android:alpha="0.6"
        android:contentDescription="@string/username"
        app:layout_constraintBottom_toBottomOf="@+id/WhiteBoxLogin"
        app:layout_constraintEnd_toEndOf="@+id/WhiteBoxLogin"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="@+id/WhiteBoxLogin"
        app:layout_constraintTop_toTopOf="@+id/WhiteBoxLogin"
        app:layout_constraintVertical_bias="0.163"
        app:srcCompat="@drawable/user_icon" />

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="199dp"
        android:layout_height="27dp"
        android:background="@drawable/round_button_red"
        android:fontFamily="cursive"
        android:stateListAnimator="@null"
        android:text="Sign Up"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/WhiteBoxLogin"
        app:layout_constraintEnd_toEndOf="@+id/WhiteBoxLogin"
        app:layout_constraintStart_toStartOf="@+id/WhiteBoxLogin"
        app:layout_constraintTop_toTopOf="@+id/WhiteBoxLogin"
        app:layout_constraintVertical_bias="0.95" />

    <TextView
        android:id="@+id/line0"
        android:layout_width="224dp"
        android:layout_height="1.5sp"
        android:background="@drawable/input_box"
        app:layout_constraintBottom_toBottomOf="@+id/WhiteBoxLogin"
        app:layout_constraintEnd_toEndOf="@+id/WhiteBoxLogin"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="@+id/WhiteBoxLogin"
        app:layout_constraintTop_toTopOf="@+id/WhiteBoxLogin"
        app:layout_constraintVertical_bias="0.833" />

    <TextView
        android:id="@+id/line1"
        android:layout_width="224dp"
        android:layout_height="1.5sp"
        android:background="@drawable/input_box"
        app:layout_constraintBottom_toBottomOf="@+id/WhiteBoxLogin"
        app:layout_constraintEnd_toEndOf="@+id/WhiteBoxLogin"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="@+id/WhiteBoxLogin"
        app:layout_constraintTop_toTopOf="@+id/WhiteBoxLogin"
        app:layout_constraintVertical_bias="0.683" />

    <TextView
        android:id="@+id/line2"
        android:layout_width="224dp"
        android:layout_height="1.5sp"
        android:background="@drawable/input_box"
        app:layout_constraintBottom_toBottomOf="@+id/WhiteBoxLogin"
        app:layout_constraintEnd_toEndOf="@+id/WhiteBoxLogin"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="@+id/WhiteBoxLogin"
        app:layout_constraintTop_toTopOf="@+id/WhiteBoxLogin"
        app:layout_constraintVertical_bias="0.529" />

    <TextView
        android:id="@+id/line4"
        android:layout_width="224dp"
        android:layout_height="1.5sp"
        android:background="@drawable/input_box"
        app:layout_constraintBottom_toBottomOf="@+id/WhiteBoxLogin"
        app:layout_constraintEnd_toEndOf="@+id/WhiteBoxLogin"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="@+id/WhiteBoxLogin"
        app:layout_constraintTop_toTopOf="@+id/WhiteBoxLogin"
        app:layout_constraintVertical_bias="0.39" />

    <TextView
        android:id="@+id/line5"
        android:layout_width="224dp"
        android:layout_height="1.5sp"
        android:background="@drawable/input_box"
        app:layout_constraintBottom_toBottomOf="@+id/WhiteBoxLogin"
        app:layout_constraintEnd_toEndOf="@+id/WhiteBoxLogin"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="@+id/WhiteBoxLogin"
        app:layout_constraintTop_toTopOf="@+id/WhiteBoxLogin"
        app:layout_constraintVertical_bias="0.249" />


</androidx.constraintlayout.widget.ConstraintLayout>